k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: churn-model-svc
  namespace: ml-production

spec:
  selector:
    app: churn-model

  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP

  type: LoadBalancer
