k8s/services-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-model-v1-svc
  namespace: ml-production
spec:
  selector:
    app: churn-model
    version: v1
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: churn-model-v2-svc
  namespace: ml-production
spec:
  selector:
    app: churn-model
    version: v2
  ports:
    - port: 80
      targetPort: 8080
